--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "authentify",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simplified authentication package",
   "author": "Muhammad Fahad",
   "main": "dist/index.js",
   "scripts": {
@@ -11,22 +11,34 @@
     "prebuild": "rimraf ./dist",
     "test": "jest"
   },
-  "keywords": [],
-  "license": "ISC",
+  "keywords": [
+    "auth",
+    "jwt",
+    "authentication"
+  ],
+  "license": "MIT",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/core-js": "^2.5.8",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "express": "^4.18.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
   },
   "files": [
     "dist/**/*"
-  ]
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MFahad777/Authentify.git"
+  },
+  "homepage": "https://github.com/MFahad777/Authentify#readme"
 }
