--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-tokenize",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "A simplified authentication package",
   "author": "Muhammad Fahad",
   "main": "dist/index.js",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/core-js": "^2.5.8",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "express": "^4.18.2",
