--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-tokenize",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "A simplified authentication package",
   "author": "Muhammad Fahad",
   "main": "dist/index.js",
@@ -29,6 +29,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "jsonwebtoken": "^9.0.2"
   },
   "files": [
