--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-tokenize",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "description": "A simplified authentication package",
   "author": "Muhammad Fahad",
   "main": "dist/index.js",
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/query-string": "^6.3.0",
     "express": "^4.18.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
